RESOLVED FIXED63915
NP_RemoveProperty is not called back by Safari when delete npObject.prop is encountered in JavaScript
https://bugs.webkit.org/show_bug.cgi?id=63915
Summary NP_RemoveProperty is not called back by Safari when delete npObject.prop is e...
Anders Carlsson
Reported 2011-07-04 12:48:45 PDT
NP_RemoveProperty is not called back by Safari when delete npObject.prop is encountered in JavaScript
Attachments
Patch (15.88 KB, patch)
2011-07-04 12:54 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-07-04 12:54:14 PDT
Anders Carlsson
Comment 2 2011-07-04 12:59:01 PDT
Zoltan Herczeg
Comment 3 2011-07-04 13:18:42 PDT
Killed the Qt bot: /ramdisk/qt-linux-release/build/Tools/DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeRemoveProperty.cpp: In member function ‘bool NPRuntimeRemoveProperty::TestObject::getProperty(void*, NPVariant*)’: /ramdisk/qt-linux-release/build/Tools/DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeRemoveProperty.cpp:64: error: ‘strlen’ was not declared in this scope /ramdisk/qt-linux-release/build/Tools/DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeRemoveProperty.cpp:64: error: too many initializers for ‘NPString’ Probably #include <string.h> could solve this. Are you aware of this?
Anders Carlsson
Comment 4 2011-07-04 13:22:29 PDT
(In reply to comment #3) > Are you aware of this? Fixed in http://trac.webkit.org/changeset/90374.
Balazs Kelemen
Comment 5 2011-07-05 01:25:42 PDT
Let me quote a half sentence from the Changelog: "... there doesn't seem to be a way to make a WebKit2 specific test." This could be fixed by adding wk2 specific results to the Layouttests/platform/wk2 directory and teach owrt and nwrt to use them. I created a bug for this: https://bugs.webkit.org/show_bug.cgi?id=63926
Note You need to log in before you can comment on or make changes to this bug.