2011-07-04  Anders Carlsson  <andersca@apple.com>

NP_RemoveProperty is not called back by Safari when delete npObject.prop is encountered in JavaScript
        https://bugs.webkit.org/show_bug.cgi?id=63915
        <rdar://problem/7124300>

        Reviewed by Sam Weinig.

        * WebProcess/Plugins/Netscape/JSNPObject.cpp:
        (WebKit::JSNPObject::deleteProperty):
        Call NP_RemoveProperty on the NPObject.

        * WebProcess/Plugins/Netscape/JSNPObject.h:
        Add deleteProperty.
2011-07-04  Anders Carlsson  <andersca@apple.com>

        NP_RemoveProperty is not called back by Safari when delete npObject.prop is encountered in JavaScript
        https://bugs.webkit.org/show_bug.cgi?id=63915
        <rdar://problem/7124300>

        Reviewed by Sam Weinig.

        Add a test. I made this Mac-WebKit2 specific for now since no other plug-in implementations support this,
        and there doesn't seem to be a way to make a WebKit2 specific test.

        * platform/mac-wk2/plugins/npruntime/remove-property-from-javascript-expected.txt: Added.
        * platform/mac-wk2/plugins/npruntime/remove-property-from-javascript.html: Added.
2011-07-04  Anders Carlsson  <andersca@apple.com>

        NP_RemoveProperty is not called back by Safari when delete npObject.prop is encountered in JavaScript
        https://bugs.webkit.org/show_bug.cgi?id=63915
        <rdar://problem/7124300>

        Reviewed by Sam Weinig.

        Extend the NPRuntimeRemoveProperty to handle delete object.property from JavaScript.

        * DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:
        (PluginTest::NPN_IdentifierIsString):
        (PluginTest::NPN_UTF8FromIdentifier):
        (PluginTest::NPN_IntFromIdentifier):
        (PluginTest::NPN_RetainObject):
        (PluginTest::NPN_ReleaseObject):
        * DumpRenderTree/TestNetscapePlugIn/PluginTest.h:
        (PluginTest::Object::removeProperty):
        (PluginTest::Object::identifierIs):
        (PluginTest::Object::NP_RemoveProperty):
        (PluginTest::Object::npClass):
        * DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeRemoveProperty.cpp:
        (NPRuntimeRemoveProperty::TestObject::TestObject):
        (NPRuntimeRemoveProperty::TestObject::hasProperty):
        (NPRuntimeRemoveProperty::TestObject::getProperty):
        (NPRuntimeRemoveProperty::TestObject::removeProperty):
        (NPRuntimeRemoveProperty::PluginObject::PluginObject):
        (NPRuntimeRemoveProperty::PluginObject::~PluginObject):
        (NPRuntimeRemoveProperty::PluginObject::hasMethod):
        (NPRuntimeRemoveProperty::PluginObject::invoke):
        (NPRuntimeRemoveProperty::PluginObject::hasProperty):
        (NPRuntimeRemoveProperty::PluginObject::getProperty):
        (NPRuntimeRemoveProperty::NPP_GetValue):


Canonical link: https://commits.webkit.org/79638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90372 268f45cc-cd09-0410-ab3c-d52691b4dbfc