Tools/DumpRenderTree/TestNetscapePlugIn/PluginTest.h
@@ -48,6 +48,7 @@ DEFINE_HAS_MEMBER_CHECK(invoke, bool, (NPIdentifier methodName, const NPVariant*
 DEFINE_HAS_MEMBER_CHECK(invokeDefault, bool, (const NPVariant*, uint32_t, NPVariant* result));
 DEFINE_HAS_MEMBER_CHECK(hasProperty, bool, (NPIdentifier propertyName));
 DEFINE_HAS_MEMBER_CHECK(getProperty, bool, (NPIdentifier propertyName, NPVariant* result));
+DEFINE_HAS_MEMBER_CHECK(removeProperty, bool, (NPIdentifier propertyName));
 
 class PluginTest {
 public:
@@ -78,7 +79,13 @@ public:
     // NPRuntime NPN functions.
     NPIdentifier NPN_GetStringIdentifier(const NPUTF8* name);
     NPIdentifier NPN_GetIntIdentifier(int32_t intid);
+    bool NPN_IdentifierIsString(NPIdentifier);
+    NPUTF8* NPN_UTF8FromIdentifier(NPIdentifier);
+    int32_t NPN_IntFromIdentifier(NPIdentifier);
+
     NPObject* NPN_CreateObject(NPClass*);
+    NPObject* NPN_RetainObject(NPObject*);
+    void NPN_ReleaseObject(NPObject*);
     bool NPN_RemoveProperty(NPObject*, NPIdentifier propertyName);
 
 #ifdef XP_MACOSX
@@ -159,6 +166,18 @@ protected:
             return false;
         }
 
+        bool removeProperty(NPIdentifier propertyName)
+        {
+            assert(false);
+            return false;
+        }
+
+        // Helper functions.
+        bool identifierIs(NPIdentifier identifier, const char* value)
+        {
+            return pluginTest()->NPN_GetStringIdentifier(value) == identifier;
+        }
+
     protected:
         Object()
             : m_pluginTest(0)
@@ -207,6 +226,11 @@ protected:
             return static_cast<T*>(npObject)->getProperty(propertyName, result);
         }
 
+        static bool NP_RemoveProperty(NPObject* npObject, NPIdentifier propertyName)
+        {
+            return static_cast<T*>(npObject)->removeProperty(propertyName);
+        }
+
         static NPClass* npClass()
         {
             static NPClass npClass = {
@@ -220,7 +244,7 @@ protected:
                 has_member_hasProperty<T>::value ? NP_HasProperty : 0,
                 has_member_getProperty<T>::value ? NP_GetProperty : 0,
                 0, // NPClass::setProperty
-                0, // NPClass::removeProperty
+                has_member_removeProperty<T>::value ? NP_RemoveProperty : 0,
                 0, // NPClass::enumerate
                 0  // NPClass::construct
             };
